# gpu-curve-operations

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  MNT4753-input  MNT4753-parameters  README.md  build.sh  resultref
cuda-fixnum/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  main.cu  main.cuh  mnt4_g1.cu  mnt4_g2.cu  mnt6_g1.cu  mnt6_g2.cu
cuda-fixnum/bench/: bench.cu
cuda-fixnum/src/array/: fixnum_array.cu
cuda-fixnum/src/fixnum/: slot_layout.cu
cuda-fixnum/src/modnum/internal/: monty.cu
depends/libff/libff/algebra/curves/mnt753/mnt4753/: mnt4753_g1.cpp
depends/libff/libff/algebra/curves/mnt753/mnt6753/: mnt6753_g1.cpp  mnt6753_g2.cpp
depends/libff/libff/algebra/fields/: bigint.hpp  bigint.tcc
depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc
libsnark/: CMakeLists.txt  cuda_prover_piecewise.cpp  generate_parameters.cpp  main.cpp
libsnark/caml/: caml_bn128.cpp
libsnark/zk_proof_systems/ppzksnark/r1cs_bg_ppzksnark/: r1cs_bg_ppzksnark.tcc
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.tcc
sample-data/: inputs-1
